@@ -1,3 +1,13 @@
+2009-11-19  Rahul Kuchhal  <kuchhal@chromium.org>
+
+        Reviewed by Darin Adler.
+
+        Do not assert when a high number is used for roman numerals in lists.
+        https://bugs.webkit.org/show_bug.cgi?id=31652
+
+        * fast/lists/ol-start-roman.html: Added.
+        * platform/mac/fast/lists/ol-start-roman-expected.txt: Added.
+
 2009-11-19  Eric Z. Ayers  <zundel@google.com>
 
         Reviewed by Pavel Feldman.
